A lot of stuff!
Adding one more gamepad.

Adding some nice styling. It's also responsive!
(i.e. the sidebar will move down if the viewport is too narrow)

Adding some SVG graphics as well.

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,8 @@
-theme: jekyll-theme-cayman
+plugins:
+  - jekyll-seo-tag
+  - jekyll-github-metadata
+  - jekyll-readme-index
+  - jekyll-relative-links
 
 collections:
   gamepads:
@@ -6,3 +10,13 @@ collections:
     permalink: /:path:output_ext
 
 lsi: false
+
+readme_index:
+  remove_originals: true
+
+defaults:
+  -
+    scope:
+      path: ""
+    values:
+      layout: "default"
